--- a/app/src/main/res/layout/activity_enable_auth_id.xml
+++ b/app/src/main/res/layout/activity_enable_auth_id.xml
@@ -14,8 +14,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/faceIDRL"
-        android:padding="20dp"
-        >
+        android:padding="@dimen/_20sdp"
+        android:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,21 +27,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Enable Face ID"
-                android:textSize="@dimen/text_size_16sp"
+                android:textSize="@dimen/_16ssp"
                 android:textColor="@color/primary_black"
                 android:fontFamily="@font/opensans_bold"
-                android:layout_marginBottom="21dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginBottom="@dimen/_21sdp"
+                android:layout_marginTop="@dimen/_62sdp"
                 />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="By enabling Face ID, you are preventing unauthorized users from gaining access to your account and other sensitive information."
-                android:textSize="@dimen/text_size_12sp"
+                android:textSize="@dimen/_12ssp"
                 android:textColor="@color/primary_black"
                 android:fontFamily="@font/opensans_regular"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="@dimen/_40sdp"
                 />
 
             <ImageView
@@ -62,16 +62,16 @@
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/enableFaceCV"
                 android:layout_width="match_parent"
-                android:layout_height="43dp"
+                android:layout_height="@dimen/_43sdp"
                 app:cardBackgroundColor="@color/primary_color"
-                app:cardCornerRadius="22dp"
+                app:cardCornerRadius="@dimen/_22sdp"
                 android:layout_marginBottom="20dp"
                 >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Enable"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
@@ -84,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Not Now"
-                android:textSize="@dimen/text_size_12sp"
+                android:textSize="@dimen/_12ssp"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -99,7 +99,7 @@
         android:orientation="vertical"
         android:id="@+id/touchIDRL"
         android:visibility="gone"
-        android:padding="20dp">
+        android:padding="@dimen/_20sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -111,21 +111,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Enable Touch ID"
-                android:textSize="@dimen/text_size_16sp"
+                android:textSize="@dimen/_16ssp"
                 android:textColor="@color/primary_black"
                 android:fontFamily="@font/opensans_bold"
-                android:layout_marginBottom="21dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginBottom="@dimen/_21sdp"
+                android:layout_marginTop="@dimen/_62sdp"
                 />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="By enabling Touch ID, you are preventing unauthorized users from gaining access to your account and other sensitive information."
-                android:textSize="@dimen/text_size_12sp"
+                android:textSize="@dimen/_12ssp"
                 android:textColor="@color/primary_black"
                 android:fontFamily="@font/opensans_regular"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="@dimen/_40sdp"
                 />
 
             <ImageView
@@ -141,22 +141,22 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="@dimen/_50sdp"
             >
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/enableTouchCV"
                 android:layout_width="match_parent"
-                android:layout_height="43dp"
+                android:layout_height="@dimen/_43sdp"
                 app:cardBackgroundColor="@color/primary_color"
-                app:cardCornerRadius="22dp"
-                android:layout_marginBottom="20dp"
+                app:cardCornerRadius="@dimen/_22sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 >
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Enable"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:gravity="center"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
@@ -169,7 +169,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Not Now"
-                android:textSize="@dimen/text_size_12sp"
+                android:textSize="@dimen/_12ssp"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center"
                 android:layout_gravity="center"
@@ -204,10 +204,11 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="31dp"
-                    android:layout_marginTop="37dp"
+                    android:id="@+id/succesCloseIV"
+                    android:layout_width="@dimen/_15sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:layout_marginStart="@dimen/_32sdp"
+                    android:layout_marginTop="@dimen/_37sdp"
                     android:src="@drawable/ic_x"
                     app:tint="@color/white" />
 
@@ -237,14 +238,14 @@
                 android:orientation="vertical"
                 android:paddingLeft="22dp"
                 android:paddingRight="22dp"
-                android:layout_marginTop="40dp">
+                android:layout_marginTop="@dimen/_30sdp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Your Account Has Been Created"
                     android:fontFamily="@font/opensans_bold"
-                    android:textSize="@dimen/text_size_16sp"
+                    android:textSize="@dimen/_16ssp"
                     android:textColor="@color/primary_black"
                     android:gravity="center_horizontal"/>
 
@@ -253,19 +254,19 @@
                     android:layout_height="wrap_content"
                     android:text="You’re almost there! Before you can start tokenizing your money. Please follow the instructions below."
                     android:fontFamily="@font/opensans_regular"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:textColor="@color/primary_black"
-                    android:layout_marginTop="11dp"/>
+                    android:layout_marginTop="@dimen/_11sdp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:orientation="horizontal"
                     android:gravity="center">
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
                         android:src="@drawable/ic_id_verify"/>
 
                     <LinearLayout
@@ -273,13 +274,13 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_weight="1"
-                        android:layout_marginStart="16dp">
+                        android:layout_marginStart="@dimen/_16sdp">
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Verify Your Identity"
                             android:fontFamily="@font/opensans_semibold"
-                            android:textSize="@dimen/text_size_12sp"
+                            android:textSize="@dimen/_12ssp"
                             android:textColor="@color/primary_black" />
 
                         <TextView
@@ -287,7 +288,7 @@
                             android:layout_height="wrap_content"
                             android:text="ID, Mailing address"
                             android:fontFamily="@font/opensans_regular"
-                            android:textSize="@dimen/text_size_10sp"
+                            android:textSize="@dimen/_10ssp"
                             android:textColor="@color/xdark_gray" />
 
                     </LinearLayout>
@@ -297,7 +298,7 @@
                         android:layout_height="wrap_content"
                         android:text="5 min"
                         android:fontFamily="@font/opensans_semibold"
-                        android:textSize="@dimen/text_size_12sp"
+                        android:textSize="@dimen/_12ssp"
                         android:textColor="@color/primary_green" />
                 </LinearLayout>
 
@@ -305,7 +306,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="@color/vlight_gray"
-                    android:layout_marginTop="18dp"/>
+                    android:layout_marginTop="@dimen/_18sdp"/>
 
 
             </LinearLayout>
@@ -316,13 +317,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_alignParentBottom="true"
-                android:layout_marginTop="50dp"
-                android:padding="31dp">
+                android:layout_marginTop="@dimen/_50sdp"
+                android:padding="@dimen/_31sdp">
 
                 <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/getStartedCV"
+                    android:id="@+id/successGetStartedCV"
                     android:layout_width="match_parent"
-                    android:layout_height="43dp"
+                    android:layout_height="@dimen/_43sdp"
                     app:cardBackgroundColor="@color/primary_color"
                     app:cardCornerRadius="30dp"
                     android:layout_marginBottom="20dp"
@@ -331,7 +332,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Get Started"
-                        android:textSize="@dimen/text_size_12sp"
+                        android:textSize="@dimen/_12ssp"
                         android:gravity="center"
                         android:layout_gravity="center"
                         android:textColor="@color/white"
@@ -340,11 +341,11 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <TextView
-                    android:id="@+id/notNowTV"
+                    android:id="@+id/notNowSuccessTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Not Now"
-                    android:textSize="@dimen/text_size_12sp"
+                    android:textSize="@dimen/_12ssp"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:layout_gravity="center"
