--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:id="@+id/imgClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="@dimen/_21sdp"
         android:layout_marginTop="?attr/actionBarSize"
         android:background="@color/white"
         android:src="@drawable/ic_close" />
@@ -38,7 +38,7 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
+                    android:layout_marginLeft="@dimen/_21sdp"
                     android:background="@color/white"
                     android:src="@drawable/ic_close"
                     android:visibility="invisible" />
@@ -80,8 +80,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/layoutClose"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="@dimen/_21sdp"
+                android:layout_marginRight="@dimen/_21sdp"
                 android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -89,13 +89,13 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="@dimen/_44sdp"
                     android:hint="Email"
                     android:textColorHint="@color/black"
-                    app:boxCornerRadiusBottomEnd="10dp"
-                    app:boxCornerRadiusBottomStart="10dp"
-                    app:boxCornerRadiusTopEnd="10dp"
-                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_green"
                     app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
@@ -110,9 +110,9 @@
                         android:imeOptions="actionNext"
                         android:inputType="text"
                         android:maxLength="30"
-                        android:padding="14dp"
+                        android:padding="@dimen/_12sdp"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/text_size_18sp" />
+                        android:textSize="@dimen/_12ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -133,10 +133,10 @@
                         android:id="@+id/tvEmailError"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/_10sdp"
                         android:fontFamily="@font/opensans_regular"
                         android:textColor="@color/error_red"
-                        android:textSize="@dimen/text_size_14sp"></TextView>
+                        android:textSize="@dimen/_12ssp"></TextView>
                 </LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -144,13 +144,13 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="@dimen/_22sdp"
                     android:hint="Password"
                     android:textColorHint="@color/black"
-                    app:boxCornerRadiusBottomEnd="10dp"
-                    app:boxCornerRadiusBottomStart="10dp"
-                    app:boxCornerRadiusTopEnd="10dp"
-                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_green"
                     app:endIconDrawable="@drawable/ic_faceid"
                     app:endIconMode="custom"
@@ -168,13 +168,13 @@
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:maxLength="30"
-                        android:padding="14dp"
+                        android:padding="@dimen/_12sdp"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/text_size_18sp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:boxCornerRadiusTopStart="10dp" />
+                        android:textSize="@dimen/_12ssp"
+                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusTopStart="@dimen/_10sdp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
@@ -194,33 +194,33 @@
                         android:id="@+id/tvPwdError"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="@dimen/_10sdp"
                         android:fontFamily="@font/opensans_regular"
                         android:textColor="@color/error_red"
-                        android:textSize="@dimen/text_size_14sp"></TextView>
+                        android:textSize="@dimen/_12ssp"></TextView>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/_11sdp"
                     android:orientation="horizontal">
 
                     <CheckBox
                         android:id="@+id/chkRemember"
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
+                        android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/remembertxt"
                         android:textColor="@color/primary_black"
-                        android:textSize="@dimen/text_size_14sp"
+                        android:textSize="@dimen/_12ssp"
                         android:theme="@style/AppTheme" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="@dimen/_25sdp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -231,7 +231,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/forgotpwdtxt"
                         android:textColor="@color/primary_green"
-                        android:textSize="13dp"
+                        android:textSize="@dimen/_12ssp"
                         android:layout_weight="1"/>
 
                     <TextView
@@ -241,17 +241,17 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/retrievemail"
                         android:textColor="@color/primary_green"
-                        android:textSize="13dp" />
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvNext"
                     android:layout_width="match_parent"
-                    android:layout_height="64dp"
+                    android:layout_height="@dimen/_44sdp"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="@dimen/_33sdp"
                     app:cardBackgroundColor="@color/inactive_color"
-                    app:cardCornerRadius="32dp">
+                    app:cardCornerRadius="@dimen/_22sdp">
 
                     <TextView
                         android:id="@+id/nextBtn"
