--- a/app/src/main/res/layout/activity_retrieve_email.xml
+++ b/app/src/main/res/layout/activity_retrieve_email.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:paddingLeft="32dp"
-    android:paddingRight="32dp"
+    android:paddingLeft="@dimen/_21sdp"
+    android:paddingRight="@dimen/_21sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.RetrieveEmailActivity">
 
@@ -15,17 +15,17 @@
         android:id="@+id/imgClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="@dimen/_45sdp"
         android:src="@drawable/ic_close" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20.67dp"
+        android:layout_marginTop="@dimen/_14sdp"
         android:fontFamily="@font/opensans_bold"
         android:text="@string/retrievemail"
         android:textColor="@color/black"
-        android:textSize="24dp" />
+        android:textSize="@dimen/_16ssp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -41,17 +41,18 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="@dimen/_14sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/retrieveemailcontent"
+                android:lineSpacingExtra="@dimen/_5sdp"
                 android:textColor="@color/primary_black"
-                android:textSize="17sp" />
+                android:textSize="@dimen/_12ssp" />
 
             <com.greenbox.coyni.utils.outline_et.OutLineBoxPhoneNumberEditText
                 android:id="@+id/rePhoneNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp" />
+                android:layout_marginTop="@dimen/_21sdp" />
 
 
             <com.google.android.material.textfield.TextInputLayout
@@ -59,13 +60,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="@dimen/_21sdp"
                 android:hint="@string/firstName"
                 android:textColorHint="@color/black"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10sp"
-                app:boxCornerRadiusTopStart="10sp"
+                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                 app:boxStrokeColor="@color/primary_color"
                 app:expandedHintEnabled="false"
                 app:hintTextColor="@color/primary_green">
@@ -79,9 +80,9 @@
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLength="30"
-                    android:padding="14dp"
+                    android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -90,13 +91,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:hint="@string/lastName"
                 android:textColorHint="@color/black"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10sp"
-                app:boxCornerRadiusTopStart="10sp"
+                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                 app:boxStrokeColor="@color/primary_color"
                 app:expandedHintEnabled="false"
                 app:hintTextColor="@color/primary_green">
@@ -110,19 +111,19 @@
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLength="30"
-                    android:padding="14dp"
+                    android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/reCardViewNextBtn"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_marginTop="103dp"
+                android:layout_height="@dimen/_44sdp"
+                android:layout_marginTop="@dimen/_188sdp"
                 app:cardBackgroundColor="@color/primary_color"
-                app:cardCornerRadius="32dp">
+                app:cardCornerRadius="@dimen/_22sdp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -131,9 +132,12 @@
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/next"
                     android:textColor="@color/white"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.card.MaterialCardView>
+            <androidx.viewpager.widget.ViewPager
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_28sdp"/>
 
         </LinearLayout>
     </ScrollView>
