--- a/app/src/main/res/layout/fragment_face_id_not_available__bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_face_id_not_available__bottom_sheet.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="30dp"
-    android:paddingRight="32dp"
+    android:paddingLeft="@dimen/_21sdp"
+    android:paddingRight="@dimen/_21sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <!-- TODO: Update blank fragment layout -->
@@ -18,9 +18,9 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="65dp"
-            android:layout_height="3dp"
+        <View
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_3sdp"
             android:layout_gravity="center"
             android:background="@drawable/shape_green_round_rect" />
 
@@ -34,24 +34,24 @@
         android:text="@string/faceidnotavaitxt"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="@dimen/text_size_24sp" />
+        android:textSize="@dimen/_16ssp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="@dimen/_16sdp"
         android:fontFamily="@font/opensans_regular"
         android:text="@string/faceidnotavaidescri"
         android:textColor="@color/primary_black"
-        android:textSize="@dimen/text_size_18sp" />
+        android:textSize="@dimen/_12ssp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvOK"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="@dimen/_44sdp"
+        android:layout_marginTop="@dimen/_40sdp"
         app:cardBackgroundColor="@color/primary_green"
-        app:cardCornerRadius="32dp">
+        app:cardCornerRadius="@dimen/_22sdp">
 
         <TextView
             android:id="@+id/okBtn"
@@ -59,13 +59,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/opensans_bold"
-            android:text="OK"
+            android:text="@string/ok"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_18sp" />
+            android:textSize="@dimen/_12ssp" />
     </androidx.cardview.widget.CardView>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="42dp" />
+        android:layout_height="@dimen/_28sdp" />
 </LinearLayout>
