--- a/app/src/main/res/layout/fragment_login__em_pa_incorrect__bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_login__em_pa_incorrect__bottom_sheet.xml
@@ -5,37 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
+    android:paddingLeft="@dimen/_21sdp"
+    android:paddingRight="@dimen/_21sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/_44sdp"
         android:fontFamily="@font/opensans_bold"
         android:text="@string/epincorrecttext"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="@dimen/text_size_24sp" />
+        android:textSize="@dimen/_16ssp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_14sdp"
         android:fontFamily="@font/opensans_regular"
         android:text="@string/epincorrectdescri"
         android:textColor="@color/primary_black"
-        android:textSize="@dimen/text_size_18sp" />
+        android:textSize="@dimen/_12ssp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvEmailOK"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
+        android:layout_height="@dimen/_44sdp"
         android:layout_marginTop="54dp"
         app:cardBackgroundColor="@color/primary_green"
-        app:cardCornerRadius="32dp">
+        app:cardCornerRadius="@dimen/_22sdp">
 
         <TextView
             android:id="@+id/okBtn"
@@ -43,15 +43,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/opensans_bold"
-            android:text="OK"
+            android:text="@string/ok"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_18sp" />
+            android:textSize="@dimen/_14sdp" />
     </androidx.cardview.widget.CardView>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="42dp" />
+        android:layout_height="@dimen/_28sdp" />
 
 
 </LinearLayout>
