--- a/app/src/main/res/layout/retrieve_email_processing_layout.xml
+++ b/app/src/main/res/layout/retrieve_email_processing_layout.xml
@@ -13,26 +13,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_gravity="center"
-        android:layout_marginTop="208dp"
-        android:layout_marginBottom="42.41dp"
+        android:layout_marginTop="@dimen/_143sdp"
         android:src="@drawable/ic_processing"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/processing"
-        android:textSize="24sp"
+        android:textSize="@dimen/_16ssp"
+        android:layout_marginTop="@dimen/_29sdp"
         android:textColor="@color/black"
         android:gravity="center"
         android:fontFamily="@font/opensans_bold"
-        android:layout_marginLeft="31dp"
-        android:layout_marginRight="31dp"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/processingcontent"
-        android:textSize="18dp"
+        android:textSize="@dimen/_12ssp"
+        android:fontFamily="@font/opensans_regular"
         android:textColor="@color/primary_black"
         android:textAlignment="center"
         android:layout_marginTop="32dp"
